# 404-financas

./: README.md  a.py
app/: .gitignore  README.md  pyproject.toml
app/src/: main.py
app/src/pages/: configs.py  ferramentas.py  home.py  ia.py  login_page.py  todas_transacoes.py
